...
    case fish
    case shellfish

    var localizedTitle: String {
        switch self {
        case .milk:      return "Süt"
        case .egg:       return "Yumurta"
        case .peanut:    return "Yer fıstığı"
        case .treeNut:   return "Ağaç yemişleri"
        case .wheat:     return "Buğday"
        case .soy:       return "Soya"
        case .sesame:    return "Susam"
        case .fish:      return "Balık"
...
